Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,10 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
     Vero inventore deleniti eveniet harum voluptates nesciunt odio autem laudantium excepturi ducimus nostrum voluptatum, 
     sed commodi, repellendus necessitatibus veniam vitae quibusdam repudiandae.</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur 
+      adipisicing elit. Pariatur ratione ullam reiciendis corrupti doloremque? 
+      Deserunt, soluta voluptates quibusdam voluptas architecto nam minima delectus exercitationem 
+      nostrum suscipit consectetur dignissimos labore ab!</p>
 </body>
 </html>
